# research-tables

./: .gitignore  README.md  last_response.json  pyproject.toml  rename_project.py  tasks.py
auto_review/data/: aggregate.py  read.py  transform.py  write.py
auto_review/model/: __init__.py  evaluate.py  visualize.py
auto_review/polar/data/: read.py
auto_review/ui/: openai_interface.py  streamlit.py
notebooks/: 1.0-psb-api-design.ipynb  1.0-psb-baseline-openai.ipynb  1.0-psb-example.ipynb  1.0-psb-langchain-tutorial.ipynb  query.yaml
scripts/pdm/: README.md  default.yaml  train.py  train_polars.py
scripts/time_series/: train.py
table_extract/data/: aggregate.py  read.py  transform.py  write.py
table_extract/model/: evaluate.py  train.py  visualize.py
table_extract/polar/data/: read.py  split.py
tests/: utils.py
tests/unit/: test_transform.py
tests/unit/solution/: select_pattern.csv
your_project/: .gitignore  README.md  pyproject.toml  tasks.py
your_project/notebooks/: 1.0-psb-bar_crawl_eda.ipynb
your_project/scripts/pdm/: polars.yaml  train.py  train_polars.py
your_project/scripts/time_series/: default.yaml  train.py
your_project/scripts/time_series/tsfresh/: default.yaml
your_project/tests/: utils.py
your_project/tests/unit/: test_transform.py
your_project/tests/unit/prompt/: select_pattern.csv
your_project/your_package/: utils.py
your_project/your_package/data/: aggregate.py  feature.py  read.py  transform.py  write.py
your_project/your_package/model/: component.py  evaluate.py  inference.py  split.py  visualize.py
(+4 files in other folders)
