[tool.poetry]
name = "auto_review"
version = "0.1.0"
description = "Application to aid researchers by extracting common ects from research tables"
authors = ["Patrick Bray"]
readme = "README.md"
packages = [{include = "auto_review"}]

[tool.poetry.dependencies]
python = "^3.9"
mlflow = "^2.4.1"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
awscli = "^1.27.153"
fire = "^0.5.0"
tsfresh = "^0.20.1"
loguru = "^0.7.0"
polars = "^0.18.7"
langchain = "^0.0.270"
pinecone-client = "^2.2.2"
python-dotenv = "^1.0.0"
openai = "^0.27.8"
tiktoken = "^0.4.0"
arxiv = "^1.4.8"


[tool.poetry.group.dev.dependencies]
coverage = "^7.2.7"
black = {extras = ["jupyter"], version = "^23.3.0"}
flake8 = "^6.0.0"
ipykernel = "^6.23.2"
pytest = "^7.3.2"
isort = "^5.12.0"
beavis = "^0.3.0"
ghp-import = "^2.1.0"
pdoc = "^13.1.1"
invoke = "^2.1.3"
jupyter = {extras = ["black"], version = "^1.0.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[flake8]
max-line-length = 120
max-complexity = 10
